More vin refactor