@@ -25,8 +25,8 @@ public class DealershipTest {
     public void addVehicleTest (){
         //Arrange
         Dealership dealership = new Dealership("Olu Cars",  "303 2nd st, san francisco, CA", "234-456-7890");
-        Vehicle vehicle1 = new Vehicle(123,1997,"Toyota", "Camry", "Sedan", "red", 155600,20000);
-        Vehicle vehicle2 = new Vehicle(123, 2020, "Honda", "Civic", "Sedan", "Blue", 15000, 20000.00);
+        Vehicle vehicle1 = new Vehicle("123",1997,"Toyota", "Camry", "Sedan", "red", 155600,20000);
+        Vehicle vehicle2 = new Vehicle("123", 2020, "Honda", "Civic", "Sedan", "Blue", 15000, 20000.00);
         //Act
         dealership.addVehicle(vehicle1);
         dealership.addVehicle(vehicle2);
@@ -40,8 +40,8 @@ public class DealershipTest {
     public void testgetvehicle (){
         //Arrange
         Dealership dealership = new Dealership("Olu Cars",  "303 2nd st, san francisco, CA", "234-456-7890");
-        Vehicle vehicle1 = new Vehicle(123,1997,"Toyota", "Camry", "Sedan", "red", 155600,20000);
-        Vehicle vehicle2 = new Vehicle(123, 2020, "Honda", "Civic", "Sedan", "Blue", 15000, 20000.00);
+        Vehicle vehicle1 = new Vehicle("123",1997,"Toyota", "Camry", "Sedan", "red", 155600,20000);
+        Vehicle vehicle2 = new Vehicle("123", 2020, "Honda", "Civic", "Sedan", "Blue", 15000, 20000.00);
         //Act
         dealership.addVehicle(vehicle1);
         dealership.addVehicle(vehicle2);
@@ -58,9 +58,9 @@ public class DealershipTest {
     public void testGetVehiclesByMakeModel() {
         // Arrange
         Dealership dealership = new Dealership("Test Dealership", "123 Main St", "555-1234");
-        dealership.addVehicle(new Vehicle(1001, 2020, "Toyota", "Camry", "Sedan", "Red", 15000, 25000));
-        dealership.addVehicle(new Vehicle(1002, 2019, "Honda", "Civic", "Sedan", "Blue", 12000, 20000));
-        dealership.addVehicle(new Vehicle(1003, 2018, "Toyota", "Corolla", "Sedan", "White", 30000, 18000));
+        dealership.addVehicle(new Vehicle("1001", 2020, "Toyota", "Camry", "Sedan", "Red", 15000, 25000));
+        dealership.addVehicle(new Vehicle("1002", 2019, "Honda", "Civic", "Sedan", "Blue", 12000, 20000));
+        dealership.addVehicle(new Vehicle("1003", 2018, "Toyota", "Corolla", "Sedan", "White", 30000, 18000));
 
         // Act
         List<Vehicle> results = dealership.getVehiclesByMakeModel("Toyota");
@@ -75,10 +75,10 @@ public class DealershipTest {
     public void testRemoveVehicleByVin() {
         // Arrange
         Dealership dealership = new Dealership("Test Dealership", "123 Main St", "555-1234");
-        dealership.addVehicle(new Vehicle(1001, 2020, "Toyota", "Camry", "Sedan", "Red", 15000, 25000));
+        dealership.addVehicle(new Vehicle("1001", 2020, "Toyota", "Camry", "Sedan", "Red", 15000, 25000));
 
         // Act
-        boolean removed = dealership.removeVehicleByVin(1001);
+        boolean removed = dealership.removeVehicleByVin("1001");
 
         // Assert
         assertTrue(removed); // Vehicle should be  removed.
@@ -89,10 +89,10 @@ public class DealershipTest {
     public void testRemoveVehicleByVin_NotFound() {
         // Arrange
         Dealership dealership = new Dealership("Test Dealership", "123 Main St", "555-1234");
-        dealership.addVehicle(new Vehicle(1001, 2020, "Toyota", "Camry", "Sedan", "Red", 15000, 25000));
+        dealership.addVehicle(new Vehicle("1001", 2020, "Toyota", "Camry", "Sedan", "Red", 15000, 25000));
 
         // Act
-        boolean removed = dealership.removeVehicleByVin(9999);  // wrong VIN
+        boolean removed = dealership.removeVehicleByVin("9999");  // wrong VIN
 
         // Assert
         assertFalse(removed); //Vehicle removal should fail because VIN does not exist.
@@ -102,9 +102,9 @@ public class DealershipTest {
     public void testGetVehiclesByPriceRange_FindsMatchingVehicles() {
         // Arrange
         Dealership dealership = new Dealership("Test Dealership", "123 Main St", "555-1234");
-        dealership.addVehicle(new Vehicle(1001, 2020, "Toyota", "Camry", "Sedan", "Red", 15000, 25000));
-        dealership.addVehicle(new Vehicle(1002, 2019, "Honda", "Civic", "Sedan", "Blue", 12000, 20000));
-        dealership.addVehicle(new Vehicle(1003, 2018, "Ford", "Fusion", "Sedan", "Black", 30000, 18000));
+        dealership.addVehicle(new Vehicle("1001", 2020, "Toyota", "Camry", "Sedan", "Red", 15000, 25000));
+        dealership.addVehicle(new Vehicle("1002", 2019, "Honda", "Civic", "Sedan", "Blue", 12000, 20000));
+        dealership.addVehicle(new Vehicle("1003", 2018, "Ford", "Fusion", "Sedan", "Black", 30000, 18000));
 
         // Act
         List<Vehicle> results = dealership.getVehiclesByPriceRange(18000, 25000);
@@ -117,7 +117,7 @@ public class DealershipTest {
     public void testGetVehiclesByPriceRange_NoMatches() {
         // Arrange
         Dealership dealership = new Dealership("Test Dealership", "123 Main St", "555-1234");
-        dealership.addVehicle(new Vehicle(1001, 2020, "Toyota", "Camry", "Sedan", "Red", 15000, 25000));
+        dealership.addVehicle(new Vehicle("1001", 2020, "Toyota", "Camry", "Sedan", "Red", 15000, 25000));
 
         // Act
         List<Vehicle> results = dealership.getVehiclesByPriceRange(30000, 50000);  // No vehicles this expensive
@@ -130,14 +130,14 @@ public class DealershipTest {
     public void testGetVehiclesByPriceRange_BoundaryCheck() {
         // Arrange
         Dealership dealership = new Dealership("Test Dealership", "123 Main St", "555-1234");
-        dealership.addVehicle(new Vehicle(1001, 2020, "Toyota", "Camry", "Sedan", "Red", 15000, 25000));
+        dealership.addVehicle(new Vehicle("1001", 2020, "Toyota", "Camry", "Sedan", "Red", 15000, 25000));
 
         // Act
         List<Vehicle> results = dealership.getVehiclesByPriceRange(25000, 25000);  // Exact match at upper boundary
 
         // Assert
         assertEquals(1, results.size(), "Expected exactly one vehicle matching the boundary price.");
-        assertEquals(1001, results.get(0).getVin());
+        assertEquals("1001", results.getFirst().getVin());
 
 
     }
@@ -146,33 +146,33 @@ public class DealershipTest {
     public void testGetVehiclesByYearRange() {
         // Arrange: Create dealership and add vehicles
         Dealership dealership = new Dealership("Test Dealership", "123 Main St", "555-1234");
-        dealership.addVehicle(new Vehicle(1001, 2018, "Toyota", "Camry", "Sedan", "Red", 15000, 25000));
-        dealership.addVehicle(new Vehicle(1002, 2020, "Honda", "Civic", "Sedan", "Blue", 12000, 20000));
-        dealership.addVehicle(new Vehicle(1003, 2022, "Ford", "Fusion", "Sedan", "Black", 5000, 30000));
+        dealership.addVehicle(new Vehicle("1001", 2018, "Toyota", "Camry", "Sedan", "Red", 15000, 25000));
+        dealership.addVehicle(new Vehicle("1002", 2020, "Honda", "Civic", "Sedan", "Blue", 12000, 20000));
+        dealership.addVehicle(new Vehicle("1003", 2022, "Ford", "Fusion", "Sedan", "Black", 5000, 30000));
 
         // Act: Search for vehicles between 2019 and 2022 (should find 2020 and 2022 models)
         List<Vehicle> results = dealership.getVehiclesByYearRange(2019, 2022);
 
         // Assert: Expect 2 results
         assertEquals(2, results.size(), "Expected 2 vehicles in the year range.");
-        assertEquals(1002, results.get(0).getVin(), "First vehicle should have VIN 1002.");
-        assertEquals(1003, results.get(1).getVin(), "Second vehicle should have VIN 1003.");
+        assertEquals("1002", results.get(0).getVin(), "First vehicle should have VIN 1002.");
+        assertEquals("1003", results.get(1).getVin(), "Second vehicle should have VIN 1003.");
     }
 
     @Test
     public void testGetVehiclesColor() {
         // Arrange
         Dealership dealership = new Dealership("Test Dealership", "123 Main St", "555-1234");
-        dealership.addVehicle(new Vehicle(1001, 2020, "Toyota", "Camry", "Sedan", "Red", 15000, 25000));
-        dealership.addVehicle(new Vehicle(1002, 2019, "Honda", "Civic", "Sedan", "Blue", 12000, 20000));
-        dealership.addVehicle(new Vehicle(1003, 2018, "Toyota", "Corolla", "Sedan", "White", 30000, 18000));
+        dealership.addVehicle(new Vehicle("1001", 2020, "Toyota", "Camry", "Sedan", "Red", 15000, 25000));
+        dealership.addVehicle(new Vehicle("1002", 2019, "Honda", "Civic", "Sedan", "Blue", 12000, 20000));
+        dealership.addVehicle(new Vehicle("1003", 2018, "Toyota", "Corolla", "Sedan", "White", 30000, 18000));
 
         // Act
         List<Vehicle> results = dealership.getVehiclesByColor("Red");
 
         // Assert
         assertEquals(1, results.size());
-        assertEquals("Red", results.get(0).getColor());
+        assertEquals("Red", results.getFirst().getColor());
 
     }
 
@@ -180,9 +180,9 @@ public class DealershipTest {
     public void testGetVehiclesByMileageRange() {
         // Arrange: Create dealership and add vehicles
         Dealership dealership = new Dealership("Test Dealership", "123 Main St", "555-1234");
-        dealership.addVehicle(new Vehicle(1001, 2018, "Toyota", "Camry", "Sedan", "Red", 15000, 25000));
-        dealership.addVehicle(new Vehicle(1002, 2020, "Honda", "Civic", "Sedan", "Blue", 12000, 20000));
-        dealership.addVehicle(new Vehicle(1003, 2022, "Ford", "Fusion", "Sedan", "Black", 5000, 30000));
+        dealership.addVehicle(new Vehicle("1001", 2018, "Toyota", "Camry", "Sedan", "Red", 15000, 25000));
+        dealership.addVehicle(new Vehicle("1002", 2020, "Honda", "Civic", "Sedan", "Blue", 12000, 20000));
+        dealership.addVehicle(new Vehicle("1003", 2022, "Ford", "Fusion", "Sedan", "Black", 5000, 30000));
 
         // Act: Search for vehicles between 2019 and 2022 (should find 2020 and 2022 models)
         List<Vehicle> results = dealership.getVehiclesByMileageRange(5000, 12000);
@@ -197,9 +197,9 @@ public class DealershipTest {
     public void testGetVehiclesByType() {
         // Arrange
         Dealership dealership = new Dealership("Test Dealership", "123 Main St", "555-1234");
-        dealership.addVehicle(new Vehicle(1001, 2020, "Toyota", "Camry", "Sedan", "Red", 15000, 25000));
-        dealership.addVehicle(new Vehicle(1002, 2019, "Honda", "Civic", "Sedan", "Blue", 12000, 20000));
-        dealership.addVehicle(new Vehicle(1003, 2018, "Toyota", "Corolla", "Sedan", "White", 30000, 18000));
+        dealership.addVehicle(new Vehicle("1001", 2020, "Toyota", "Camry", "Sedan", "Red", 15000, 25000));
+        dealership.addVehicle(new Vehicle("1002", 2019, "Honda", "Civic", "Sedan", "Blue", 12000, 20000));
+        dealership.addVehicle(new Vehicle("1003", 2018, "Toyota", "Corolla", "Sedan", "White", 30000, 18000));
 
         // Act
         List<Vehicle> results = dealership.getVehiclesByVehicleType("Sedan");
